# rfsed

./: .gitignore  .travis.yml  CHANGELOG  CONTRIBUTORS  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: draft-pdf.yml  sphinx.yml
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
data/Earthquake_Catalog/: eq_events.quakeml
data/rfstreams_Moho/: rfstreams.h5
docs/: .buildinfo  .buildinfo copy  .travis.yml  CNAME  ExtractEq.html  ExtractEq.rst  ExtractEqMultiproc.html  ExtractEqMultiproc.rst  ReverbFilter.html  ReverbFilter.rst  WaveformFitting.html  WaveformFitting.rst  WaveformFittingMultiproc.html  api.html  api.rst  apiuyuiyui.html  apiuyuiyui.rst  conf.py  elast.rst  fghfghapi.html  genindex.html  gettingstarted.html  gettingstarted.rst  hkSeqYeck.html  hkSeqYeck.rst  hkYu.html  hkZhu.html  hkZhu.rst  index.html  index.rst  index.txt  index_prv.txt  links.html  links.rst  objects.inv  py-modindex.html  search.html  searchindex copy.js  searchindex.js  synrf.html  (+3 more)
docs/_build/doctrees/: ExtractEq.doctree  ExtractEqMultiproc.doctree  ReverbFilter.doctree  WaveformFitting.doctree  WaveformFittingMultiproc.doctree  api.doctree  api_notused.doctree  apiuyuiyui.doctree  environment.pickle  fghfghapi.doctree  gettingstarted.doctree  hkSeqYeck.doctree  hkYu.doctree  hkZhu.doctree  index.doctree  links.doctree  synrf.doctree
docs/_build/html/: .buildinfo  ExtractEq.html  ExtractEqMultiproc.html  ReverbFilter.html  WaveformFitting.html  WaveformFittingMultiproc.html  api.html  api_notused.html  genindex.html  gettingstarted.html  hkSeqYeck.html  hkYu.html  hkZhu.html  index.html  links.html  objects.inv  py-modindex.html  search.html  searchindex.js  synrf.html
docs/_build/html/_sources/: ExtractEqMultiproc.rst.txt  WaveformFitting.rst.txt  WaveformFittingMultiproc.rst.txt  gettingstarted.rst.txt  (+3 more)
docs/_sources/: ReverbFilter.rst.txt  WaveformFittingMultiproc.rst.txt  api.rst.txt  gettingstarted.rst.txt  hkSeqYeck.rst.txt  hkZhu.rst.txt  index.rst.txt  links.rst.txt
docs/logo/: conf.py
examples/Calculated_Receiver_Functions/: 00_rf_data.h5
examples/earthquake_data/Extracted_Eq_Data/: eq_data.h5
examples/earthquake_data/Extracted_Eq_Data_Multiproc/: eq_data.h5
examples/notebooks/: 01_Download_Waveform_Data_from_IRIS.ipynb  02_example_Calculate_Receiver_Functions.ipynb  04_example_ExtractEq.ipynb  05_example_ExtractEqMultiproc.ipynb  06_example_hkZhu.ipynb  09_example_SynthAnalysis.ipynb  10_example_WaveformFitting.ipynb  11_example_WaveformFittingMultiproc.ipynb  12_example_SynRF.ipynb
examples/scripts/: 00_example_Get_Catalog.py  01_example_ExtractEq.py  02_example_ExtractEqMultiproc.py  03_example_hkZhu.py  04_example_hkYeck_Sequential.py  05_example_reverbfilt_hkYu.py  06_example_SynthRF.py  07_example_WaveformFitting.py  08_example_WaveformFittingMultiproc.py
joss/: paper.bib  paper.md
joss manuscript/: paper.bib  paper.md
src/rfsed/: ExtractEq.py  ExtractEqMultiproc.py  ReverbFilter.py  SynthAnalysis.py  SynthExp.py  SynthRF.py  WaveformFitting.py  WaveformFittingMultiproc.py  __init__.py  hkSeqYeck.py  hkYu.py  hkZhu.py  synrf.py  util.py
src/rfsed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rfsed/SynRF/: FwdRF.py  __init__.py  synrf.py
src/rfsed/data/: __init__.py
src/rfsed/examples/: __init__.py
src/rfsed/rf/: __init__.py  batch.py  deconvolve.py  imaging.py  profile.py  rfstream.py  simple_model.py  util.py
src/rfsed/tests/: test_ReverbFilter.py  test_WaveformFitting.py  test_WaveformFittingMultiproc.py  test_hkYu.py  test_hkZhu.py
tests/: test_ExtractEq.py  test_ExtractEqMultiproc.py  test_ReverbFilter.py  test_WaveformFitting.py  test_WaveformFittingMultiproc.py  test_hkYu.py
tests/rfsed/: __init__.py  test_ReverbFilter.py  test_WaveformFittingMultiproc.py  test_hkSeqYeck.py  test_hkYu.py  test_hkZhu.py
tests/rfsed/plot/: eq_data.h5
tests/tests_rf/: __init__.py  test_deconvolve.py  test_imaging.py  test_rfstream.py
(+78 files in other folders)
