[metadata]
name = rfsed
version = 0.1.8
author = Stephen Akinremi
author_email = s.akinremi@utwente.nl
description = Package for receiver functions analysis and dealing with sediment effects in receiver functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/akinremisa/rfsed
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Topic :: Scientific/Engineering :: Physics
keywords = Seismology, Receiver Function, Sediment effect in receiver functions, Crustal modelling, Moho,  Earth Sciences

[options]
package_dir = 
	= src
python_requires = >=3.6, <3.11
install_requires = 
	rf>=1.0.3
	decorator
	matplotlib
	numpy
	scipy
	obspy>=1.0.3
	tqdm
	OWSLib
	cartopy
	geographiclib
	shapely
	seaborn
	scipy
	scikit-learn
	h5
	h5py
	obspyh5
	tqdm
	alabaster
	sphinx
	colorama>=0.1.6
	plotly>=5.17.0
	psutil>=5.9.6
	ipykernel>=6.29.4
tests_require = 
	pytest
	py
zip_safe = False

[options.package_data]
* = *.quakeml, *.dat, *.h5, *.jpg, *.pdf, *.xml, *.tar.gz, *.json, *.mseed, *.png


[options.extras_require]
docs = 
	sphinx<6.0
	pydata-sphinx-theme
	sphinx-copybutton
	sphinx-gallery
	jinja2<3.1
tests = 
	pytest
	py

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

