[metadata]
name = rfsed
version = 0.1.8
author = Stephen Akinremi
author_email = s.akinremi@utwente.nl
description = Package for receiver functions analysis and dealing with sediment effects in receiver functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/akinremisa/rfsed
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Topic :: Scientific/Engineering :: Physics
keywords = Seismology, Receiver Function, Sediment effect in receiver functions, Crustal modelling, Moho,  Earth Sciences

[options]
package_dir = 
	= src
python_requires = >=3.6, <3.11
install_requires = 
	obspy>=1.0.3
	rf>=1.0.3
	numpy<=1.24.0
	obspyh5
	matplotlib
	pytest>=7.4.4
	scikit-learn
	seaborn
	colorama
	OWSLib
	plotly
	psutil
	pyyaml
	pytz>=2020.1
	importlib-metadata
	
    
	
tests_require = 
	pytest>=7.4.4
	py
zip_safe = False
include_package_data = True



[options.package_data]
* = *.quakeml, *.dat, *.h5, *.jpg, *.pdf, *.xml, *.tar.gz, *.json, *.mseed, *.png, *.ipynb, *.py


[options.extras_require]
docs = 
	sphinx<6.0
	pydata-sphinx-theme
	sphinx-copybutton
	sphinx-gallery
	jinja2<3.1
tests = 
	pytest
	py

[options.packages.find]
where = src
